--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="">
+        <select name="listaproductos" id="listaproductos"></select>
+        <button type="submit"></button>
+    </form>
+    <div id="aaa"></div>
     <script src="index.js"></script>
 </body>
 </html>
