--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-    <div id="enduro" ></div>
+    <section id="endurosect">
+        <div id="enduro" ></div>
+        <div id="carrito_lateral"></div>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
