Agregué Sweet alert

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="enduro" ></div>
         <div id="carrito_lateral"></div>
     </section>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
